back.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: teachuaback

spec:
  replicas: 2
  selector:
    matchLabels:
      app: teachuaback
  template:
    metadata:
      labels:
        app: teachuaback
    spec:
      containers:
      - name: teachuaback
        image: registry646.azurecr.io/backend:1.4
        ports:
        - containerPort: 8080
---
apiVersion: v1

kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: teachuaback
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
