ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: teachua-ingress

spec:
  rules:
  - host: teachua.centralus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
